# Cursos_TeoMeWhy

./: README.md
Curso_de_SQL/: 01_select.sql  docker-compose.yml  main.py  pyproject.toml
Curso_de_SQL/01_aula/: 05_select_col.sql  06_orderby.sql  07_case_when.sql
Curso_de_SQL/02_exercicios/: 01_where.sql  02_where.sql  03_where.sql
Curso_de_SQL/02_tempo_de_foco/: 01_where.sql  02_where.sql  03_where.sql  04_where.sql  05_where.sql  06_where.sql  07_where.sql  08_where.sql  09_where.sql
Curso_de_SQL/aula/: 01_select.sql  02_tables.sql
Curso_de_SQL/bora_praticar/: 04_where.sql
Curso_de_SQL/curso-sql/: clientes.csv
